--- a/app/layout/style.module.scss
+++ b/app/layout/style.module.scss
@@ -1,9 +1,9 @@
-.menu{
-    li{
+.menu {
+    li {
         height: 100%;
         min-width: 150px;
         transition: all 0.15s ease-in-out;
-        a{
+        a {
             display: flex;
             height: 100%;
             width: 100%;
@@ -11,8 +11,8 @@
             justify-content: center;
         }
     }
-    li:hover{
+    li:hover {
         background: #fff;
-        color:black
+        color: black;
     }
 }
